--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 GOOGLE_ID=163815714908-usmdh72dcp3b7amlmsprgkn33guf4t67.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+MONGODB_URI=mongodb+srv://woocashbox:mongodb_2023@cluster0.mqoej5e.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL=localhost:3000;
+NEXTAUTH_URL_INTERNAL=localhost:3000;
+NEXTAUTH_SECRET=unwpYKAIBM5SItWS7N+bCNWwdOBqErq7izexiwdAvMg=
