fix schema typo

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ GOOGLE_CLIENT_SECRET=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
 
 MONGODB_URI=mongodb+srv://woocashbox:mongodb_2023@cluster0.mqoej5e.mongodb.net/?retryWrites=true&w=majority
 
-NEXTAUTH_URL=localhost:3000;
-NEXTAUTH_URL_INTERNAL=localhost:3000;
+NEXTAUTH_URL=http://localhost   
+NEXTAUTH_URL_INTERNAL=http://localhost
 NEXTAUTH_SECRET=unwpYKAIBM5SItWS7N+bCNWwdOBqErq7izexiwdAvMg=
